--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -6,8 +6,8 @@ jobs:
     steps:
       - name: Print to console
         run: echo Hello GH Actions!
-      - name: print new lines
+      - name: Print new lines
         run:
-          echo Line 1!
-          echo Line 2!
+          echo $0\n
+          echo Line 2!\n
           echo Hello world
