--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -5,9 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print to console
-        run: echo Hello GH Actions!
+        run: $'echo Hello GH Actions!\n'
       - name: Print new lines
         run:
-          echo $0\n
-          echo Line 2!\n
-          echo Hello world
+          echo $'$0\n'
+          echo $'Line 2!\n'
+          echo $'Hello world\n'
